--- a/sVanilla/src/ClientUi/Setting/About.ui
+++ b/sVanilla/src/ClientUi/Setting/About.ui
@@ -66,7 +66,7 @@
       <item>
        <spacer name="verticalSpacer">
         <property name="orientation">
-         <enum>Qt::Orientation::Vertical</enum>
+         <enum>Qt::Vertical</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -136,7 +136,7 @@
              <bool>true</bool>
             </property>
             <property name="alignment">
-             <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
             </property>
             <property name="openExternalLinks">
              <bool>true</bool>
@@ -146,10 +146,10 @@
           <item row="1" column="2">
            <widget class="QLabel" name="labelQQ">
             <property name="text">
-             <string>&lt;a href=&quot;https://svanilla.app/&quot;&gt;QQ群&lt;/a&gt;</string>
+             <string>&lt;a href=&quot;http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&amp;k=UMnXJemHdMkKk2Zmz7mmILwl5t1dIWqg&amp;authKey=JjmDKm%2B%2F1T1RvLZQ1tMcrW5AtOTcE5auxQ833Roi8wEA3y6LvuDuC8iqsdXq%2Bi8C&amp;noverify=0&amp;group_code=487580846&quot;&gt;QQ&lt;/a&gt;</string>
             </property>
             <property name="alignment">
-             <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
             </property>
             <property name="openExternalLinks">
              <bool>true</bool>
@@ -159,7 +159,7 @@
           <item row="1" column="4">
            <spacer name="horizontalSpacer_2">
             <property name="orientation">
-             <enum>Qt::Orientation::Horizontal</enum>
+             <enum>Qt::Horizontal</enum>
             </property>
             <property name="sizeHint" stdset="0">
              <size>
@@ -213,7 +213,7 @@ image: url(&quot;:/appIcon/sVanillaTitleLight.svg&quot;);
              <string/>
             </property>
             <property name="alignment">
-             <set>Qt::AlignmentFlag::AlignCenter</set>
+             <set>Qt::AlignCenter</set>
             </property>
            </widget>
           </item>
@@ -237,7 +237,7 @@ image: url(&quot;:/appIcon/sVanillaTitleLight.svg&quot;);
 hope it accompanies your life like vanilla, bringing a subtle fragrance to your daily routine.</string>
             </property>
             <property name="textFormat">
-             <enum>Qt::TextFormat::AutoText</enum>
+             <enum>Qt::AutoText</enum>
             </property>
            </widget>
           </item>
@@ -409,7 +409,7 @@ hope it accompanies your life like vanilla, bringing a subtle fragrance to your 
              <item>
               <spacer name="horizontalSpacer">
                <property name="orientation">
-                <enum>Qt::Orientation::Horizontal</enum>
+                <enum>Qt::Horizontal</enum>
                </property>
                <property name="sizeHint" stdset="0">
                 <size>
@@ -428,7 +428,7 @@ hope it accompanies your life like vanilla, bringing a subtle fragrance to your 
        <item row="4" column="0">
         <spacer name="verticalSpacer_2">
          <property name="orientation">
-          <enum>Qt::Orientation::Vertical</enum>
+          <enum>Qt::Vertical</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
