--- a/sVanilla/src/ClientUi/Home/HomePage.ui
+++ b/sVanilla/src/ClientUi/Home/HomePage.ui
@@ -23,7 +23,7 @@
       <item>
        <spacer name="horizontalSpacer_5">
         <property name="orientation">
-         <enum>Qt::Orientation::Horizontal</enum>
+         <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -39,7 +39,7 @@
          <string/>
         </property>
         <property name="icon">
-            <iconset theme=":/appIcon/white-sVanilla.svg"/>
+         <iconset theme=":/appIcon/white-sVanilla.svg"/>
         </property>
         <property name="_vanillaStyle_Patch" stdset="0">
          <string>AppIconButtonPatch</string>
@@ -52,7 +52,7 @@
       <item>
        <spacer name="horizontalSpacer_6">
         <property name="orientation">
-         <enum>Qt::Orientation::Horizontal</enum>
+         <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -99,7 +99,7 @@
       <string>Download What You Want</string>
      </property>
      <property name="alignment">
-      <set>Qt::AlignmentFlag::AlignCenter</set>
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
@@ -109,7 +109,7 @@
       <string>&quot;www.bilibili.com&quot;</string>
      </property>
      <property name="alignment">
-      <set>Qt::AlignmentFlag::AlignCenter</set>
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
@@ -119,7 +119,7 @@
       <string>&quot;www.youtube.com&quot;</string>
      </property>
      <property name="alignment">
-      <set>Qt::AlignmentFlag::AlignCenter</set>
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
@@ -129,7 +129,7 @@
       <string>...</string>
      </property>
      <property name="alignment">
-      <set>Qt::AlignmentFlag::AlignCenter</set>
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
@@ -139,7 +139,7 @@
       <item>
        <spacer name="horizontalSpacer_3">
         <property name="orientation">
-         <enum>Qt::Orientation::Horizontal</enum>
+         <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -157,14 +157,17 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="toolTip">
+         <string>sVanilla homepage</string>
+        </property>
         <property name="layoutDirection">
-         <enum>Qt::LayoutDirection::LeftToRight</enum>
+         <enum>Qt::LeftToRight</enum>
         </property>
         <property name="text">
          <string>Learn about sVanilla </string>
         </property>
         <property name="icon">
-            <iconset theme=":/icon/openurl.svg"/>
+         <iconset theme=":/icon/openurl.svg"/>
         </property>
         <property name="_vanillaStyle_Patch" stdset="0">
          <string>ButtonWithBorderPatch</string>
@@ -178,6 +181,9 @@
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
+        </property>
+        <property name="toolTip">
+         <string>import plugin for download</string>
         </property>
         <property name="text">
          <string>Import Plugin</string>
@@ -195,14 +201,17 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="toolTip">
+         <string>log website you want to download</string>
+        </property>
         <property name="layoutDirection">
-         <enum>Qt::LayoutDirection::LeftToRight</enum>
+         <enum>Qt::LeftToRight</enum>
         </property>
         <property name="text">
          <string>Login Download Website</string>
         </property>
         <property name="icon">
-            <iconset theme=":/icon/login.svg"/>
+         <iconset theme=":/icon/login.svg"/>
         </property>
         <property name="_vanillaStyle_Patch" stdset="0">
          <string>ButtonWithBorderPatch</string>
@@ -212,7 +221,7 @@
       <item>
        <spacer name="horizontalSpacer_4">
         <property name="orientation">
-         <enum>Qt::Orientation::Horizontal</enum>
+         <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -228,7 +237,7 @@
    <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
-      <enum>Qt::Orientation::Vertical</enum>
+      <enum>Qt::Vertical</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
@@ -256,16 +265,16 @@
          </sizepolicy>
         </property>
         <property name="toolTip">
-         <string>Add From Clipboard</string>
+         <string>clipboard</string>
         </property>
         <property name="whatsThis">
-         <string>Add From Clipboard</string>
+         <string>clipboard</string>
         </property>
         <property name="text">
          <string/>
         </property>
         <property name="icon">
-            <iconset theme=":/icon/clipboard.svg"/>
+         <iconset theme=":/icon/clipboard.svg"/>
         </property>
         <property name="_vanillaStyle_Patch" stdset="0">
          <string>CleanButtonPatch</string>
@@ -274,11 +283,17 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnHistory">
+        <property name="toolTip">
+         <string>history</string>
+        </property>
+        <property name="whatsThis">
+         <string>history</string>
+        </property>
         <property name="text">
          <string/>
         </property>
         <property name="icon">
-            <iconset theme=":/icon/history.svg"/>
+         <iconset theme=":/icon/history.svg"/>
         </property>
         <property name="_vanillaStyle_Patch" stdset="0">
          <string>CleanButtonPatch</string>
@@ -288,7 +303,7 @@
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
-         <enum>Qt::Orientation::Horizontal</enum>
+         <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -310,5 +325,6 @@
    <header>SUI/AddLinkLineEdit.h</header>
   </customwidget>
  </customwidgets>
+ <resources/>
  <connections/>
 </ui>
