--- a/sVanilla/src/ClientUi/VideoList/VideoWidget.ui
+++ b/sVanilla/src/ClientUi/VideoList/VideoWidget.ui
@@ -47,12 +47,15 @@
          </size>
         </property>
         <property name="focusPolicy">
-         <enum>Qt::FocusPolicy::ClickFocus</enum>
+         <enum>Qt::ClickFocus</enum>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="btnHistory">
+        <property name="toolTip">
+         <string>history</string>
+        </property>
         <property name="text">
          <string/>
         </property>
@@ -67,6 +70,9 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnClipboard">
+        <property name="toolTip">
+         <string>clipboard</string>
+        </property>
         <property name="text">
          <string/>
         </property>
@@ -128,7 +134,7 @@
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
-         <enum>Qt::Orientation::Horizontal</enum>
+         <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
@@ -140,6 +146,9 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnFilter">
+        <property name="toolTip">
+         <string>filter</string>
+        </property>
         <property name="text">
          <string/>
         </property>
@@ -154,6 +163,9 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnSort">
+        <property name="toolTip">
+         <string>sort</string>
+        </property>
         <property name="text">
          <string/>
         </property>
@@ -192,6 +204,9 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnSearch">
+        <property name="toolTip">
+         <string>search</string>
+        </property>
         <property name="text">
          <string/>
         </property>
@@ -226,7 +241,7 @@
        </sizepolicy>
       </property>
       <property name="orientation">
-       <enum>Qt::Orientation::Vertical</enum>
+       <enum>Qt::Vertical</enum>
       </property>
       <widget class="::VideoGridWidget" name="videoGridWidget">
        <property name="sizePolicy">
@@ -236,28 +251,28 @@
         </sizepolicy>
        </property>
        <property name="verticalScrollBarPolicy">
-        <enum>Qt::ScrollBarPolicy::ScrollBarAsNeeded</enum>
+        <enum>Qt::ScrollBarAsNeeded</enum>
        </property>
        <property name="horizontalScrollBarPolicy">
-        <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
+        <enum>Qt::ScrollBarAlwaysOff</enum>
        </property>
        <property name="verticalScrollMode">
-        <enum>QAbstractItemView::ScrollMode::ScrollPerPixel</enum>
+        <enum>QAbstractItemView::ScrollPerPixel</enum>
        </property>
        <property name="horizontalScrollMode">
-        <enum>QAbstractItemView::ScrollMode::ScrollPerPixel</enum>
+        <enum>QAbstractItemView::ScrollPerPixel</enum>
        </property>
        <property name="flow">
-        <enum>QListView::Flow::LeftToRight</enum>
+        <enum>QListView::LeftToRight</enum>
        </property>
        <property name="isWrapping" stdset="0">
         <bool>true</bool>
        </property>
        <property name="resizeMode">
-        <enum>QListView::ResizeMode::Adjust</enum>
+        <enum>QListView::Adjust</enum>
        </property>
        <property name="itemAlignment">
-        <set>Qt::AlignmentFlag::AlignHCenter</set>
+        <set>Qt::AlignHCenter</set>
        </property>
        <property name="_vanillaStyle_Patch" stdset="0">
         <string>WhiteBackgroundListWidgetPatch</string>
@@ -273,7 +288,7 @@
        </sizepolicy>
       </property>
       <property name="orientation">
-       <enum>Qt::Orientation::Vertical</enum>
+       <enum>Qt::Vertical</enum>
       </property>
       <widget class="::VideoListWidget" name="videoListWidget">
        <property name="sizePolicy">
@@ -283,13 +298,13 @@
         </sizepolicy>
        </property>
        <property name="verticalScrollBarPolicy">
-        <enum>Qt::ScrollBarPolicy::ScrollBarAsNeeded</enum>
+        <enum>Qt::ScrollBarAsNeeded</enum>
        </property>
        <property name="horizontalScrollBarPolicy">
-        <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
+        <enum>Qt::ScrollBarAlwaysOff</enum>
        </property>
        <property name="verticalScrollMode">
-        <enum>QAbstractItemView::ScrollMode::ScrollPerPixel</enum>
+        <enum>QAbstractItemView::ScrollPerPixel</enum>
        </property>
       </widget>
       <widget class="::VideoInfoWidget" name="videoListInfoWidget" native="true">
