--- a/scripts/sVanilla.wxs
+++ b/scripts/sVanilla.wxs
@@ -9,11 +9,11 @@
 <?ifndef CompressionLevel?>
     <?define CompressionLevel="high"?>
 <?endif?>
-<?define PlatformProgramFilesFolder="ProgramFilesFolder"?>
+<?define PlatformProgramFilesFolder="ProgramFiles64Folder"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
     <Product Id="*" Name="sVanilla" Language="1033" Version="1.0.0.0" Manufacturer="sVanilla studio"
         UpgradeCode="124623D9-35D6-4D2E-9474-2ADACC8BABBB">
-        <Package InstallerVersion="500" Compressed="yes" InstallScope="perMachine" />
+        <Package InstallerVersion="500" Compressed="yes" InstallScope="perMachine" Platform="x64" />
 
         <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
         <Upgrade Id="124623D9-35D6-4D2E-9474-2ADACC8BABBB">
@@ -24,6 +24,8 @@
 
         <Media Id="1" Cabinet="media1.cab" EmbedCab="yes" />
         <Icon Id="$(var.AppExeName)" SourceFile="$(var.AppPackageDir)/$(var.AppExeName)" />
+        <Property Id="ARPPRODUCTICON" Value="$(var.AppExeName)" />
+        <Property Id="ARPURLINFOABOUT" Value="https://svanilla.app/" />
 
         <Directory Id="TARGETDIR" Name="SourceDir">
             <Directory Id="$(var.PlatformProgramFilesFolder)">
@@ -45,22 +47,26 @@
         <ComponentGroup Id="ProductMenuComponents" Directory="APPLICATIONFOLDER"
             Source="$(var.AppPackageDir)">
             <!-- Executable -->
-            <Component>
-                <File Name="$(var.AppExeName)" Checksum="yes" KeyPath="yes">
-                    <Shortcut Id="StartMenuShortcut" Directory="ProgramMenuDir"
-                        Name="$(var.AppName)"
-                        WorkingDirectory="APPLICATIONFOLDER" Icon="$(var.AppExeName)" IconIndex="0"
-                        Advertise="yes" />
-                    <Shortcut Id="DesktopShortcut" Directory="DesktopFolder" Name="$(var.AppName)"
-                        WorkingDirectory="APPLICATIONFOLDER" Icon="$(var.AppExeName)" IconIndex="0"
-                        Advertise="yes" />
-                </File>
+            <Component Win64="yes">
+
+                <Shortcut Id="StartMenuShortcut" Directory="ProgramMenuDir"
+                    Name="$(var.AppName)" Target="[APPLICATIONFOLDER]$(var.AppExeName)"
+                    WorkingDirectory="APPLICATIONFOLDER" Icon="$(var.AppExeName)" IconIndex="0"
+                />
+                <Shortcut Id="DesktopShortcut" Directory="DesktopFolder" Name="$(var.AppName)"
+                    WorkingDirectory="APPLICATIONFOLDER" Icon="$(var.AppExeName)" IconIndex="0"
+                    Target="[APPLICATIONFOLDER]$(var.AppExeName)" />
+
+                <RemoveFolder Id="DesktopFolder" On="uninstall" />
+                <RegistryValue Root="HKCU" Key="Software\[Manufacturer]\[ProductName]"
+                    Name="installed" Type="integer" Value="1" KeyPath="yes" />
             </Component>
         </ComponentGroup>
 
         <Component Id="ProgramMenuDir" Directory="ProgramMenuDir">
             <RemoveFolder Id="ProgramMenuDir" On="uninstall" />
-            <RegistryValue Root="HKCU" Key="Software\Zeal\Zeal" Type="string" Value="" KeyPath="yes" />
+            <RegistryValue Root="HKCU" Key="Software\sVanilla\sVanilla" Type="string" Value=""
+                KeyPath="yes" />
         </Component>
 
         <UIRef Id="WixUI_Advanced" />
